# project-ai-chatbot

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  compose.yml  leptosfmt.toml
dioxus-frontend/: .gitignore  Cargo.toml  Dioxus.toml
dioxus-frontend/assets/: main.css
dioxus-frontend/src/: main.rs
docker/: compose.yml
frontend/: Cargo.toml  build.rs
frontend/assets/: main.css
frontend/data/ui/: main_window.slint
frontend/src/: main.rs
frontend/src/components/: chatview.rs  error.rs  hero.rs  mod.rs  output_box.rs  vhbox.rs
frontend/src/utils/: audio_stream.rs  mod.rs  ollama_stuff.rs  tts.rs
leptos-frontend/: .gitignore  Cargo.toml  README.md  index.html
leptos-frontend/src/: main.rs
leptos-frontend/src/components/: counter_btn.rs
voice-backend/: Cargo.toml  main.py  main.rs  pyproject.toml
voice-backend/src/: main.rs
voice-backend/src/api/: api.rs  mod.rs
voice-backend/src/gemini/: gemini.rs  mod.rs
