[package]
name = "dioxus-frontend"
version = "0.1.0"
authors = ["francesco.dibella@thelevelgroup.com <francesco.dibella@thelevelgroup.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["web"] }
gloo-timers = { version = "0.3", features = ["futures"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
